--- a/assets/style.css
+++ b/assets/style.css
@@ -111,3 +111,90 @@ body {
 .showcase img {
     box-shadow: 0 0 20px black ;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    position: relative;
+    bottom: 0px;
+    padding: 20px;
+}
+
+
+@media only screen and (max-width: 750px) {
+    .header {
+        width: 100%;
+        background-image: linear-gradient(135deg, #2e3e59, #455879);
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        font-size: 200%;
+        padding: 40px;
+        color: white;
+        border-bottom: 1px solid white;
+        text-align: center;
+        
+    }
+    
+    
+    .nav-bar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: white;  
+        
+    }
+    
+    .nav-list {
+        display: flex;
+        width: 100%;
+        flex-wrap: wrap;
+        
+    }
+    
+    .nav-link {
+        padding: 10px;
+    }
+    
+    
+    .nav-link-left {
+        
+        border-bottom: 1px solid white;
+        padding: 10px;
+       width: 100%;
+        text-align: center;
+    }
+    
+    .nav-link-center {
+       
+            
+            border-bottom: 1px solid white;
+            padding: 10px;
+            width: 100%;
+            text-align: center;
+        }
+    
+     .nav-link-right {
+            padding: 10px;
+          width: 100%;
+          text-align: center;
+          border-bottom: none;
+     }   
+    
+
+    .showcase {
+    box-shadow: 0 0 20px black inset;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    }
+
+
+    .footer {
+        display: flex;
+        justify-content: center;
+    }
+
+}
