--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,6 @@
 body {
     background-image: linear-gradient(135deg,  #2e3e59, #c7426a);
+    
     font-family: 'Montserrat', sans-serif;
     height: 110%;
 }
@@ -7,11 +8,12 @@ body {
 .header {
     width: 100%;
     background-image: linear-gradient(135deg, #2e3e59, #455879);
+   
     display: flex;
     font-size: 200%;
     padding: 40px;
-    color: white;
-    border-bottom: 1px solid white;
+    color:rgb(212, 208, 208);
+    border-bottom: 1px solid rgb(212, 208, 208);
     box-shadow: inset 0 -7px 9px -7px rgba(0, 0, 0, 0.4);
     transition: all ease-in-out 250ms;
 }
@@ -27,7 +29,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: stretch;
-    color: white;
+    color: rgb(212, 208, 208);
     width: 100%;
     transition: all ease-in-out 3s;
 }
@@ -38,14 +40,15 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
     width: 100%;
-    background-image: linear-gradient(135deg,  #2e3e59, #c7426a);
+    background-image: linear-gradient(135deg,  #db587f, #c7426a);
+    background-color: #c7426a;
     transition: all ease-in-out 250ms;
 }
 
 
 .nav-link-left {
     
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid rgb(212, 208, 208);
     padding: 10px;
    width: 33.3%;
     text-align: center;
@@ -55,7 +58,7 @@ body {
 .nav-link-center {
    
         
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid rgb(212, 208, 208);
         padding: 10px;
         width: 33.3%;
         text-align: center;
@@ -65,7 +68,7 @@ body {
  .nav-link-right {
     
         
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid rgb(212, 208, 208);
         padding: 10px;
       width: 33.3%;
       text-align: center;
@@ -75,20 +78,20 @@ body {
 
  .nav-link-center:hover {
      transition: ease 0.5s;
-     background-color: white;
+     background-color: rgb(212, 208, 208);
      color: #2e3e59;
      transform: scale(1.1);
  }
  .nav-link-left:hover {
      transition: ease 0.5s;
-    background-color: white;
+    background-color: rgb(212, 208, 208);
     color: #2e3e59;
     transform: scale(1.1);
 }
 
 .nav-link-right:hover {
     transition: ease 0.5s;
-    background-color: white;
+    background-color: rgb(212, 208, 208);
     color: #2e3e59;
     transform: scale(1.1);
 }
@@ -101,6 +104,7 @@ body {
     margin-bottom: none;
     background-image: url("../images/image\ \(2\)\ \(2\).jpg");
     background-position: center;
+    background-attachment: fixed;
     box-shadow: 0 0 20px black inset;
     transition: all ease-in-out 250ms;
    display: flex;
@@ -116,12 +120,105 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: rgb(212, 208, 208);
     position: relative;
     bottom: 0px;
     padding: 20px;
 }
 
+.about h2 {
+    font-size: 150%;
+}
+
+.applications h2 {
+    font-size: 150%;
+}
+
+.contact h2 {
+    font-size: 150%;
+}
+
+.info-item i {
+    font-size: 150%;
+}
+
+.info-item span {
+    font-size: 130%;
+}
+
+
+.about {
+    width: 100%;
+    background-image: linear-gradient(135deg,  #c7426a, #cf6685);
+    font-family: 'Montserrat', sans-serif;
+    padding: 50px;
+    color: rgb(212, 208, 208);
+}
+
+.applications {
+    width: 100%;
+    background-image: linear-gradient(135deg,  #6b3c48, #8a5562 );
+    font-family: 'Montserrat', sans-serif;
+    padding: 50px;
+    color:  rgb(212, 208, 208);
+}
+
+.contact {
+    width: 100%;
+    background-image: linear-gradient(135deg, #2e3e59, #455879);
+    font-family: 'Montserrat', sans-serif;
+    padding: 50px;
+    color: rgb(212, 208, 208);
+}
+
+.about:hover {
+    background-image: linear-gradient(135deg,  #cf6685, #c7426a);
+    transition: ease 1s;
+    border-top: 1px solid rgb(212, 208, 208);
+    border-bottom: 1px solid rgb(212, 208, 208);
+}
+
+.applications:hover {
+    scale: 1.5;
+    background-image: linear-gradient(135deg, #8a5562 , #6b3c48);
+    transition: ease 1s;
+    
+    border-top: 1px solid rgb(212, 208, 208);
+    border-bottom: 1px solid rgb(212, 208, 208);
+}
+
+.contact:hover {
+    scale: 1.5;
+    background-image: linear-gradient(135deg, #455879, #2e3e59);
+    transition: ease 1s;
+    transition: transform 1s linear;
+    border-top: 1px solid rgb(212, 208, 208);
+    border-bottom: 1px solid rgb(212, 208, 208);
+    
+}
+
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(212, 208, 208);
+    position: relative;
+    bottom: 0px;
+    padding: 20px;
+}
+
+
+
+.info {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.info-item {
+    padding: 20px;
+}
 
 @media only screen and (max-width: 750px) {
     .header {
@@ -130,12 +227,11 @@ body {
         display: flex;
         justify-content: center;
         align-items: flex-end;
-        font-size: 200%;
-        padding: 40px;
-        color: white;
-        border-bottom: 1px solid white;
+        font-size: 150%;
+        padding: 20px;
+        color: rgb(212, 208, 208);
         text-align: center;
-        
+        border: none;
     }
     
     
@@ -143,25 +239,32 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        color: white;  
-        
+        color: rgb(211, 209, 209);  
+        background-color: #c7426a;
     }
     
+    body {
+        background-color: #c7426a;
+        
+    }
+
     .nav-list {
         display: flex;
         width: 100%;
         flex-wrap: wrap;
-        
+        background-color: #c7426a;
+        background-image: none;
     }
     
     .nav-link {
         padding: 10px;
+        background-color: #c7426a;
     }
     
     
     .nav-link-left {
         
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid rgb(212, 208, 208);
         padding: 10px;
        width: 100%;
         text-align: center;
@@ -170,7 +273,7 @@ body {
     .nav-link-center {
        
             
-            border-bottom: 1px solid white;
+            border-bottom: 1px solid rgb(212, 208, 208);
             padding: 10px;
             width: 100%;
             text-align: center;
@@ -192,7 +295,7 @@ body {
     }
 
     .showcase img {
-        width: 70%;
+        width: 80%;
         height: auto;
     }
 
