Creating deployed application cards

--- a/assets/style.css
+++ b/assets/style.css
@@ -220,6 +220,86 @@ body {
     padding: 20px;
 }
 
+.card1 {
+    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    width: 620px;
+    height: 423px;
+    
+}
+
+.card2 {
+    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    width: 279px;
+    height: 190.35px;
+}
+
+.card3 {
+    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    width: 279px;
+    height: 190.35px;
+}
+
+.card4 {
+    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    width: 279px;
+    height: 190.35px;
+}
+
+.card5 {
+    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    width: 279px;
+    height: 190.35px;
+
+}
+
+.app-grid {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.app23 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0;
+    position:relative;
+    justify-content: center;
+    column-gap: 50px;
+    row-gap: 45px;
+    
+}
+
+.card1:hover {
+    transform: scale(1.1);
+    transition: ease-in-out 250ms;
+    box-shadow: 0 0 20px black ;
+    cursor: pointer;
+}
+.card1 p {
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    font-size: 200%;
+    transition: ease-in-out 250ms;
+}
+
+
+
+.card:hover {
+    transform: scale(1.2);
+    transition: ease-in-out 250ms;
+    box-shadow: 0 0 20px black ;
+    color: rgb(63, 62, 62);
+    padding: 10px;
+    cursor: pointer;
+}
+
+.card p {
+    
+    font-size: 200%;
+    transition: ease-in-out 250ms;
+}
+
 @media only screen and (max-width: 750px) {
     .header {
         width: 100%;
@@ -303,6 +383,87 @@ body {
     .footer {
         display: flex;
         justify-content: center;
+    }
+
+
+    .card1 {
+        background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+        width: 620px;
+        height: 426;
+        
+    }
+    
+    .card2 {
+        background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+        width: 279px;
+        height: 190.35px;
+    }
+    
+    .card3 {
+        background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+        width: 279px;
+        height: 190.35px;
+    }
+    
+    .card4 {
+        background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+        width: 279px;
+        height: 190.35px;
+    }
+    
+    .card5 {
+        background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+        width: 279px;
+        height: 190.35px;
+    
+    }
+    
+    .app-grid {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    
+    .app23 {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 0;
+        position:relative;
+        justify-content: center;
+        column-gap: 50px;
+        row-gap: 45px;
+        
+    }
+    
+    .card1:hover {
+        transform: scale(1.1);
+        transition: ease-in-out 250ms;
+        box-shadow: 0 0 20px black ;
+        cursor: pointer;
+    }
+    .card1 p {
+        position: absolute;
+        bottom: 30px;
+        left: 30px;
+        font-size: 200%;
+        transition: ease-in-out 250ms;
+    }
+    
+    
+    
+    .card:hover {
+        transform: scale(1.2);
+        transition: ease-in-out 250ms;
+        box-shadow: 0 0 20px black ;
+        color: rgb(63, 62, 62);
+        padding: 10px;
+        cursor: pointer;
+    }
+    
+    .card p {
+        
+        font-size: 200%;
+        transition: ease-in-out 250ms;
     }
 
 }
