--- a/assets/style.css
+++ b/assets/style.css
@@ -404,26 +404,26 @@ body {
 
 .card2 {
     background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
-    width: 279px;
-    height: 190.35px;
+    width: 100%;
+    height: 100%;
 }
 
 .card3 {
     background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
-    width: 279px;
-    height: 190.35px;
+    width: 100%;
+    height: 100%;
 }
 
 .card4 {
     background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
-    width: 279px;
-    height: 190.35px;
+    width: 100%;
+    height: 100%;
 }
 
 .card5 {
     background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
-    width: 279px;
-    height: 190.35px;
+    width: 100%;
+    height: 100%;
 
 }
 
@@ -445,18 +445,21 @@ body {
     justify-content: center;
     align-items: center;
     padding-bottom: 35px;
-   
+    width: 70%;
+    height: 47.6%;
+    position: relative;
+    top: 35px;
 
 
     
 }
 
 .app1 {
-    width: 50%;
-    height: 34%;
+    width: 70%;
+    height: 47.6%;
 }
 
-.card1:hover {
+/*.card1:hover {
     transform: scale(1.1);
     transition: ease-in-out 250ms;
     box-shadow: 0 0 20px black ;
@@ -468,7 +471,7 @@ body {
     left: 30px;
     font-size: 200%;
     transition: ease-in-out 250ms;
-}
+}*/
 
 /*.card {
     position: relative;
