--- a/assets/style.css
+++ b/assets/style.css
@@ -221,35 +221,38 @@ body {
 }
 
 .card1 {
-    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
-    width: 100%;
-    height: 100%;
-    
+    /*background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);*/
+    width: 60%;
+    height: auto;
+    background-color: #2e3e59;
 }
 
 .card2 {
-    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    /*background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);*/
     width: 100%;
     height: 100%;
+    background-color: #2e3e59;
 }
 
 .card3 {
-    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    /*background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);*/
     width: 100%;
     height: 100%;
+    background-color: #2e3e59;
 }
 
 .card4 {
-    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    /*background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);*/
     width: 100%;
     height: 100%;
+    background-color: #2e3e59;
 }
 
 .card5 {
-    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    /*background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);*/
     width: 100%;
     height: 100%;
-
+    background-color: #2e3e59;
 }
 
 .app-grid {
@@ -275,6 +278,8 @@ body {
 .app1 {
     width: 50%;
     height: 34%;
+    display: flex;
+    justify-content: center;
 }
 
 .card1:hover {
@@ -396,32 +401,32 @@ body {
 
     
 .card1 {
-    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    /*background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);*/
     width: 100%;
     height: 100%;
     
 }
 
 .card2 {
-    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    /*background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);*/
     width: 100%;
     height: 100%;
 }
 
 .card3 {
-    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    /*background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);*/
     width: 100%;
     height: 100%;
 }
 
 .card4 {
-    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+   /*background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);*/
     width: 100%;
     height: 100%;
 }
 
 .card5 {
-    background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);
+    /*background-image: url(../images/derek-story-840Mgehu3Mw-unsplash.jpg);*/
     width: 100%;
     height: 100%;
 
@@ -455,7 +460,7 @@ body {
 }
 
 .app1 {
-    width: 70%;
+    width: 90%;
     height: 47.6%;
 }
 
