--- a/assets/style.css
+++ b/assets/style.css
@@ -194,6 +194,10 @@ a:hover {
     color: rgb(212, 208, 208);
 }
 
+.email:hover {
+    color: #c7426a;
+}
+
 .about:hover {
     background-image: linear-gradient(135deg,  #cf6685, #c7426a);
     transition: ease 1s;
