--- a/assets/style.css
+++ b/assets/style.css
@@ -341,12 +341,12 @@ a:hover {
     box-shadow: 0 0 20px black ;
     
 }
-.card1 p {
+/*.card1 p {
     position: absolute;
     
     font-size: 200%;
     transition: ease-in-out 250ms;
-}
+}*/
 
 
 
