--- a/assets/reset.css
+++ b/assets/reset.css
@@ -6,9 +6,11 @@
   
   html {
     height: 100%;
+    overscroll-behavior-y: none;
   }
   
   body {
+      overscroll-behavior-y: none;
     min-height: 100%;
     line-height: 1;
     font-family: sans-serif;
