--- a/assets/style.css
+++ b/assets/style.css
@@ -1,405 +1,423 @@
 body {
-    background-image: linear-gradient(135deg,  #2e3e59, #c7426a);
-    font-family: 'Montserrat', sans-serif;
+  background-image: linear-gradient(135deg, #2e3e59, #c7426a);
+  font-family: "Montserrat", sans-serif;
 }
 
 /* styling coming soon page */
 .coming-soon {
-    background-color: #c7426a;
-    background-image: none;
+  background-color: #c7426a;
+  background-image: none;
 }
 
 /* header */
 .header {
-    width: 100%;
-    background-image: linear-gradient(135deg, #2e3e59, #455879);
-    display: flex;
-    font-size: 200%;
-    padding: 40px;
-    color:rgb(212, 208, 208);
-    border-bottom: 1px solid rgb(212, 208, 208);
-    box-shadow: inset 0 -7px 9px -7px rgba(0, 0, 0, 0.4);
-    transition: all ease-in-out 250ms;
+  width: 100%;
+  background-image: linear-gradient(135deg, #2e3e59, #455879);
+  display: flex;
+  font-size: 200%;
+  padding: 40px;
+  color: rgb(212, 208, 208);
+  border-bottom: 1px solid rgb(212, 208, 208);
+  box-shadow: inset 0 -7px 9px -7px rgba(0, 0, 0, 0.4);
+  transition: all ease-in-out 250ms;
 }
 
 .header h1 {
-    font-size: 200%;
-    font-weight: bolder;
+  font-size: 200%;
+  font-weight: bolder;
 }
 
 /* Nav bar */
 .nav-bar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: stretch;
-    color: rgb(212, 208, 208);
-    width: 100%;
-    transition: all ease-in-out 3s;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  color: rgb(212, 208, 208);
+  width: 100%;
+  transition: all ease-in-out 3s;
 }
 
 .nav-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 100%;
-    background-image: linear-gradient(135deg,  #db587f, #c7426a);
-    background-color: #c7426a;
-    transition: all ease-in-out 250ms;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  background-image: linear-gradient(135deg, #db587f, #c7426a);
+  background-color: #c7426a;
+  transition: all ease-in-out 250ms;
 }
 
 #nav-link-left {
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid rgb(212, 208, 208);
-    width: 33.3%;
-    text-align: center;
-    
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgb(212, 208, 208);
+  width: 33.3%;
+  text-align: center;
 }
 
 #nav-link-center {
-   
-        display: flex;
-        align-items: center;
-        border-bottom: 1px solid rgb(212, 208, 208);
-        width: 33.3%;
-        text-align: center;
-        
-    }
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgb(212, 208, 208);
+  width: 33.3%;
+  text-align: center;
+}
 
- #nav-link-right {
-    
-        display: flex; 
-        align-items: center;
-        border-bottom: 1px solid rgb(212, 208, 208);
-        width: 33.3%;
-        text-align: center;
- }
+#nav-link-right {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgb(212, 208, 208);
+  width: 33.3%;
+  text-align: center;
+}
 
-  #nav-link-center:hover {
-     transition: ease 0.5s;
-     background-color: rgb(212, 208, 208);
-     color: #2e3e59;
-     transform: scale(1.1);
- }
- 
- #nav-link-left:hover {
-     transition: ease 0.5s;
-    background-color: rgb(212, 208, 208);
-    color: #2e3e59;
-    transform: scale(1.1);
+#nav-link-center:hover {
+  transition: ease 0.5s;
+  background-color: rgb(212, 208, 208);
+  color: #2e3e59;
+  transform: scale(1.1);
+}
+
+#nav-link-left:hover {
+  transition: ease 0.5s;
+  background-color: rgb(212, 208, 208);
+  color: #2e3e59;
+  transform: scale(1.1);
 }
 
 #nav-link-right:hover {
-    transition: ease 0.5s;
-    background-color: rgb(212, 208, 208);
-    color: #2e3e59;
-    transform: scale(1.1);
-} 
+  transition: ease 0.5s;
+  background-color: rgb(212, 208, 208);
+  color: #2e3e59;
+  transform: scale(1.1);
+}
 
 /* Showcase section */
 .showcase {
-    height: 600px;
-    width: 100%;
-    margin-bottom: none;
-    background-image: url("../images/image\ \(2\)\ \(2\).jpg");
-    background-position: center;
-    background-attachment: fixed;
-    box-shadow: 0 0 20px black inset;
-    transition: all ease-in-out 250ms;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 600px;
+  width: 100%;
+  margin-bottom: none;
+  background-image: url("../images/image\ \(2\)\ \(2\).jpg");
+  background-position: center;
+  background-attachment: fixed;
+  box-shadow: 0 0 20px black inset;
+  transition: all ease-in-out 250ms;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .showcase img {
-    box-shadow: 0 0 20px black ;
+  box-shadow: 0 0 20px black;
 }
-
 
 /* Sections */
 /*about*/
 .about h2 {
-    font-size: 150%;
+  font-size: 150%;
 }
 
 .about {
-    width: 100%;
-    background-image: linear-gradient(135deg,  #c7426a, #cf6685);
-    font-family: 'Montserrat', sans-serif;
-    padding: 50px;
-    color: rgb(212, 208, 208);
+  width: 100%;
+  background-image: linear-gradient(135deg, #c7426a, #cf6685);
+  font-family: "Montserrat", sans-serif;
+  padding: 50px;
+  color: rgb(212, 208, 208);
 }
 
 .about:hover {
-    background-image: linear-gradient(135deg,  #cf6685, #c7426a);
-    transition: ease 1s;
-    border-top: 1px solid rgb(212, 208, 208);
-    border-bottom: 1px solid rgb(212, 208, 208);
+  background-image: linear-gradient(135deg, #cf6685, #c7426a);
+  transition: ease 1s;
+  border-top: 1px solid rgb(212, 208, 208);
+  border-bottom: 1px solid rgb(212, 208, 208);
 }
 
 /*applications*/
 .applications h2 {
-    font-size: 150%;
+  font-size: 150%;
 }
 
 .applications {
-    width: 100%;
-    background-image: linear-gradient(135deg,  #6b3c48, #8a5562 );
-    font-family: 'Montserrat', sans-serif;
-    padding: 50px;
-    color:  rgb(212, 208, 208);
+  width: 100%;
+  background-image: linear-gradient(135deg, #6b3c48, #8a5562);
+  font-family: "Montserrat", sans-serif;
+  padding: 50px;
+  color: rgb(212, 208, 208);
 }
 
 .applications:hover {
-    background-image: linear-gradient(135deg, #8a5562 , #6b3c48);
-    transition: ease 1s;
-    border-top: 1px solid rgb(212, 208, 208);
-    border-bottom: 1px solid rgb(212, 208, 208);
+  background-image: linear-gradient(135deg, #8a5562, #6b3c48);
+  transition: ease 1s;
+  border-top: 1px solid rgb(212, 208, 208);
+  border-bottom: 1px solid rgb(212, 208, 208);
 }
 
 /*contact*/
 .contact h2 {
-    font-size: 150%;
+  font-size: 150%;
 }
 
 .contact {
-    width: 100%;
-    background-image: linear-gradient(135deg, #2e3e59, #455879);
-    font-family: 'Montserrat', sans-serif;
-    padding: 50px;
-    color: rgb(212, 208, 208);
+  width: 100%;
+  background-image: linear-gradient(135deg, #2e3e59, #455879);
+  font-family: "Montserrat", sans-serif;
+  padding: 50px;
+  color: rgb(212, 208, 208);
 }
 
 .contact:hover {
-    scale: 1.5;
-    background-image: linear-gradient(135deg, #455879, #2e3e59);
-    transition: ease 1s;
-    transition: transform 1s linear;
-    border-top: 1px solid rgb(212, 208, 208);
-    border-bottom: 1px solid rgb(212, 208, 208);  
+  scale: 1.5;
+  background-image: linear-gradient(135deg, #455879, #2e3e59);
+  transition: ease 1s;
+  transition: transform 1s linear;
+  border-top: 1px solid rgb(212, 208, 208);
+  border-bottom: 1px solid rgb(212, 208, 208);
 }
 
 .contact-link:hover {
-    color: #c7426a;
+  color: #c7426a;
 }
 
 .info-item i {
-    font-size: 130%;
+  font-size: 130%;
 }
 
 .info-item span {
-    font-size: 130%;
+  font-size: 130%;
 }
 
 .info {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .info-item {
-    padding: 20px;
+  padding: 20px;
 }
 
 /*footer*/
 .footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(212, 208, 208);
-    position: relative;
-    bottom: 0px;
-    padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(212, 208, 208);
+  position: relative;
+  bottom: 0px;
+  padding: 20px;
 }
 
 /*application cards*/
 #card1 {
-    width: 60%;
-    height: 100%;
-    height: auto;
-    background-color: #2e3e59;
-    display: flex;
-    flex-direction: column; 
+  width: 60%;
+  height: 100%;
+  height: auto;
+  background-color: #2e3e59;
+  display: flex;
+  flex-direction: column;
 }
 
 #card2 {
-    width: 100%;
-    height: 60%;
-    background-color: #2e3e59;
+  width: 100%;
+  height: 60%;
+  background-color: #2e3e59;
 }
 
 #card3 {
-    width: 100%;
-    height: 60%;
-    background-color: #2e3e59;
+  width: 100%;
+  height: 60%;
+  background-color: #2e3e59;
 }
 
 #card4 {
-    width: 100%;
-    height: 60%;
-    background-color: #2e3e59;
+  width: 100%;
+  height: 60%;
+  background-color: #2e3e59;
 }
 
 #card5 {
-    width: 100%;
-    height: 60%;
-    background-color: #2e3e59;
+  width: 100%;
+  height: 60%;
+  background-color: #2e3e59;
 }
 
 .card-button {
-    background-color: #c7426a;
-    border: none;
-    padding: 20px;
-    color: rgb(207, 207, 207);
-    width: 100%;
-    cursor: pointer;   
+  background-color: #c7426a;
+  border: none;
+  padding: 20px;
+  color: rgb(207, 207, 207);
+  width: 100%;
+  cursor: pointer;
 }
 
 .card-button:hover {
-    background-color: #b43259;
-    border: none;
+  background-color: #b43259;
+  border: none;
 }
 
 .card-button a {
-    padding: 20px;
+  padding: 20px;
 }
 
 .app-grid {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 100%;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  align-items: center;
 }
 
 .app23 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin: 0;
-    position:relative;
-    justify-content: center;
-    column-gap: 50px;
-    row-gap: 45px;
-    width: 50%;
-    height: 34%;  
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 0;
+  position: relative;
+  justify-content: center;
+  column-gap: 50px;
+  row-gap: 45px;
+  width: 50%;
+  height: 34%;
 }
 
 .app1 {
-    width: 50%;
-    height: 50%;
-    display: flex;
-    justify-content: center;
+  width: 50%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
 }
 
 .card:hover {
-    transform: scale(1.1);
-    transition: ease-in-out 250ms;
-    box-shadow: 0 0 20px black ;  
+  transform: scale(1.1);
+  transition: ease-in-out 250ms;
+  box-shadow: 0 0 20px black;
 }
 
 #card1:hover {
-    transform: scale(1.1);
-    transition: ease-in-out 250ms;
-    box-shadow: 0 0 20px black ; 
+  transform: scale(1.1);
+  transition: ease-in-out 250ms;
+  box-shadow: 0 0 20px black;
+}
+
+.resumeButton {
+  border: none;
+  background-color: #c7426a;
+  color: white;
+  padding: 5px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.resumeButton:hover {
+  background-color: #b43259;
 }
 
 /*mobile device styling*/
 @media only screen and (max-width: 900px) {
-    /*header*/
-    .header {
-        justify-content: center;
-        font-size: 150%;
-        padding: 20px;
-        text-align: center;
-        border: none;
-    }
-    
-    /*navbar*/
-    .nav-bar {
-        flex-direction: column;
-        align-items: center;
-    }
-    
-    .nav-list {
-        flex-wrap: wrap;
-    }
-    
-    .nav-link {
-        padding: 10px;
-    }
-    
-    #nav-link-left {
-        border-bottom: 1px solid rgb(212, 208, 208);
-        padding: 10px;
-        width: 100%;
-        text-align: center;
-    }
-    
-    #nav-link-center {
-        border-bottom: 1px solid rgb(212, 208, 208);
-        padding: 10px;
-        width: 100%;
-        text-align: center;
-        }
-    
-     #nav-link-right {
-        padding: 10px;
-        width: 100%;
-        text-align: center;
-        border-bottom: none;
-     }   
-    
-     /*showcase section*/
-    .showcase {
-        box-shadow: 0 0 20px black inset;
-        justify-content: center;
-        align-items: center;
-    }
+  /*header*/
+  .header {
+    justify-content: center;
+    font-size: 150%;
+    padding: 20px;
+    text-align: center;
+    border: none;
+  }
 
-    .showcase img {
-        width: 80%;
-        height: auto;
-    }
+  .resumeDiv {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+  }
 
-/*application cards*/    
-#card1 {
+  .resumeButton {
+    margin: auto;
+  }
+
+  /*navbar*/
+  .nav-bar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .nav-list {
+    flex-wrap: wrap;
+  }
+
+  .nav-link {
+    padding: 10px;
+  }
+
+  #nav-link-left {
+    border-bottom: 1px solid rgb(212, 208, 208);
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+  }
+
+  #nav-link-center {
+    border-bottom: 1px solid rgb(212, 208, 208);
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+  }
+
+  #nav-link-right {
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+    border-bottom: none;
+  }
+
+  /*showcase section*/
+  .showcase {
+    box-shadow: 0 0 20px black inset;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .showcase img {
+    width: 80%;
+    height: auto;
+  }
+
+  /*application cards*/
+  #card1 {
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column; 
-}
+    flex-direction: column;
+  }
 
-#card2 {
+  #card2 {
     width: 100%;
     height: 100%;
-}
+  }
 
-#card3 {
+  #card3 {
     width: 100%;
     height: 100%;
-}
+  }
 
-#card4 {
+  #card4 {
     width: 100%;
     height: 100%;
-}
+  }
 
-#card5 {
+  #card5 {
     width: 100%;
     height: 100%;
-}
+  }
 
-.app-grid {
+  .app-grid {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     width: 100%;
     align-items: center;
-}
+  }
 
-.app23 {  
+  .app23 {
     grid-template-columns: 1fr 1fr;
     margin: 0;
     display: flex;
@@ -411,18 +429,17 @@ body {
     width: 70%;
     height: 50%;
     position: relative;
-    top: 35px;   
-}
+    top: 35px;
+  }
 
-.app1 {
+  .app1 {
     width: 90%;
     height: 47.6%;
-}
+  }
 
-/*footer*/
-.footer {
+  /*footer*/
+  .footer {
     display: flex;
     justify-content: center;
-}
-
+  }
 }
